// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkGridToggle should render correctly 1`] = `
<DocumentFragment>
  <button
    class="bpk-link"
    title="Keyboard Shortcut: ctrl + cmd + g"
    type="button"
  >
    Baseline grid on
  </button>
</DocumentFragment>
`;

exports[`BpkGridToggle should render correctly with the className prop 1`] = `
<DocumentFragment>
  <button
    class="bpk-link foo"
    title="Keyboard Shortcut: ctrl + cmd + g"
    type="button"
  >
    Baseline grid on
  </button>
</DocumentFragment>
`;
